--- a/transactions/templates/transactions/transaction_report.html
+++ b/transactions/templates/transactions/transaction_report.html
@@ -8,6 +8,7 @@
 
 <div class="my-10 py-3 px-4 bg-white rounded-xl shadow-md">
   <h1 class="font-bold text-3xl text-center pb-5 pt-2">Transaction Report</h1>
+  <a class="text-2xl font-bold" href="{% url "loan_list" %}">See Loan List</a>
   <hr />
   <form method="get" action="{% url 'transaction_report' %}">
     <div class="flex justify-center">
