--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -16,8 +16,8 @@
 {% endfor %} {% endif %}
 <div class="bg-white px-3 py-4 rounded-xl my-6">
 
-    <h4 class="font-bold text-3xl text-left pb-5">Account NO: {{request.user.account.account_number}}</h4>
-    <h1 class="font-bold text-3xl text-center pb-5">Update Profile Information</h1>
+    <h4 class="font-bold text-3xl text-left text-blue-900 pb-5">Account NO: {{request.user.account.account_number}}</h4>
+    <h1 class="font-bold text-3xl text-center text-blue-900 pb-5">Update Profile Information</h1>
     <div class="w-full mt-10">
         <form method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
             {% csrf_token %} {% for hidden_field in form.hidden_fields %} {{ hidden_field.errors }} {{ hidden_field }} {% endfor %}
