--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 px-10">
+<nav class="flex items-center justify-between flex-wrap bg-white p-6 px-10 fixed top-0 w-full shadow-lg">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
         <span class="font-bold text-3xl tracking-tight text-blue-900"><a href="/">Deulia Bank</a></span>
     </div>
@@ -12,21 +12,24 @@
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto px-10">
         {% if request.user.is_authenticated %}
             <div class="text-md lg:flex-grow">
-                <a href="{% url "transaction_report" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">
+                <a href="{% url "transaction_report" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-blue-900 hover:font-semibold mr-4">
                     Report
                 </a>
-                <a href="{% url "deposit_money" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">
+                <a href="{% url "deposit_money" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-blue-900 hover:font-semibold mr-4">
                     Deposit
                 </a>
-                <a href="{% url "withdraw_money" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">
+                <a href="{% url "withdraw_money" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-blue-900 hover:font-semibold mr-4">
                     Withdraw
                 </a>
-                <a href="{% url "loan_request" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-red-900 hover:font-black mr-4">
+                <a href="{% url "loan_request" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-blue-900 hover:font-semibold mr-4">
                     Loan Request
+                </a>
+                <a href="{% url "transfer" %}" class="block mt-4 lg:inline-block lg:mt-0 text-blue-900 hover:text-blue-900 hover:font-semibold mr-4">
+                    Transfer
                 </a>
             </div>
             <div class="flex w-auto">
-                <div class="text-blue-900 my-auto font-black px-5">Welcome, {{ request.user.first_name }} (balance : {{request.user.account.balance}}) </div>
+                <div class="text-blue-900 my-auto font-black px-5">Welcome, {{ request.user.first_name }} (Balance : {{request.user.account.balance}}) </div>
 
                 <a href="{% url "profile" %}" class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Profile</a>
                 <a href="{% url "logout" %}" class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-dark hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
