--- a/transactions/templates/transactions/transaction_report.html
+++ b/transactions/templates/transactions/transaction_report.html
@@ -6,9 +6,12 @@
 {% block content %}
 
 
-<div class="my-10 py-3 px-4 bg-white rounded-xl shadow-md">
+<div class="mt-10 py-3 px-4 bg-white rounded-xl ">
   <h1 class="font-bold text-3xl text-center pb-5 pt-2">Transaction Report</h1>
-  <a class="text-2xl font-bold" href="{% url "loan_list" %}">See Loan List</a>
+  <div class="flex justify-between items-center mb-4">
+    <h3 class="text-xl">{{user.account.account_number}}</h3>
+    <a href="{% url "loan_list" %}"><p class="text-2xl font-bold border-2 rounded hover:bg-gray-300 px-4">See Loan Report</p></a>
+  </div>
   <hr />
   <form method="get" action="{% url 'transaction_report' %}">
     <div class="flex justify-center">
