--- a/transactions/templates/transactions/transfer.html
+++ b/transactions/templates/transactions/transfer.html
@@ -2,7 +2,7 @@
 {% block head_title %}{{ title }}{% endblock head_title %}
 {% block content %}
 
-<div class="w-full flex mt-24 justify-center ">
+<div class="w-full flex mt-12 justify-center ">
     <div class="bg-white w-5/12 rounded-lg">
         {% if title == 'Request For Loan' %}
 <div><a class="font-bold text-blue text-center pb-5 pt-10 px-5" href="{% url 'loan_list' %}">View All Loan List</a></div>
@@ -17,6 +17,12 @@
                     Amount
                 </label>
                 <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight border rounded-md border-gray-500 focus:outline-none focus:shadow-outline" name="amount" id="amount" type="number" required placeholder="Amount">
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="to_account">
+                    Account Number
+                </label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight border rounded-md border-gray-500 focus:outline-none focus:shadow-outline" name="to_account" id="to_account" type="number" required placeholder="Account Number">
             </div>
             {% if form.amount.errors %} {% for error in form.amount.errors %}
             <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
